--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
 EditorStartupMap=/Game/ThirdPersonCPP/Maps/ThirdPersonExampleMap
-GlobalDefaultGameMode="/Script/RPG_Game_Prototype.RPG_Game_PrototypeGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
@@ -16,5 +16,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/RPG_Game_Prototype")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/RPG_Game_Prototype")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="RPG_Game_PrototypeGameMode")
-+ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="RPG_Game_PrototypeCharacter")
++ActiveClassRedirects=(OldClassName="RPG_Game_PrototypeCharacter",NewClassName="MyPlayer")
 
