--- a/RPG_Game_Prototype.uproject
+++ b/RPG_Game_Prototype.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "RPG_Game_Prototype",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
