Project upgraded from 4 -> 5
Now I will continue to develop on UE5.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,3 +18,17 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="RPG_Game_PrototypeGameMode")
 +ActiveClassRedirects=(OldClassName="RPG_Game_PrototypeCharacter",NewClassName="MyPlayer")
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=74CAF00C45B0001B40B5BDA4C0740606
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
