Enemy AI converted into behavior tree type.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,12 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0E731E164032E5B576C211A011271239
-ProjectName=Third Person Game Template
+ProjectName=Escape from reality
+Description=My RPG Game
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/AIModule.AISense_Sight]
+bAutoRegisterAllPawnsAsSources = false
+
