--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -32,3 +32,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.Quest.questID",NewName="/Script/RPG_Game_Prototype.Quest.questIndex")
