Weapon system refactored, melee attack animation added.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -35,4 +35,7 @@ ManualIPAddress=
 
 [CoreRedirects]
 +PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.Quest.questID",NewName="/Script/RPG_Game_Prototype.Quest.questIndex")
++PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseCharacter.socketName",NewName="/Script/RPG_Game_Prototype.BaseCharacter.socketRWeaponRifleName")
++PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseCharacter.socketTransform",NewName="/Script/RPG_Game_Prototype.BaseCharacter.socketRWeaponRifleTransform")
++PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseWeapon.canShoot",NewName="/Script/RPG_Game_Prototype.BaseWeapon.canAttack")
 
