Renaming some functions and organizing gaps.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -38,4 +38,5 @@ ManualIPAddress=
 +PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseCharacter.socketName",NewName="/Script/RPG_Game_Prototype.BaseCharacter.socketRWeaponRifleName")
 +PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseCharacter.socketTransform",NewName="/Script/RPG_Game_Prototype.BaseCharacter.socketRWeaponRifleTransform")
 +PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.BaseWeapon.canShoot",NewName="/Script/RPG_Game_Prototype.BaseWeapon.canAttack")
++PropertyRedirects=(OldName="/Script/RPG_Game_Prototype.AttributesBoolean.isShooting",NewName="/Script/RPG_Game_Prototype.AttributesBoolean.isAttacking")
 
